test/errors/array_types_error/zs/implicit_array_varint_error.zs
package implicit_array_varint_error;

struct ImplicitArrayVarintError
{
    implicit varint array[];
};
